fix firefox dark mode bug

--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ body{
     position: fixed;
     display: flex;
     height: 100px;
+    width: 100px;
     top: 0;
     left: 15px;
     /* scale: 0.3; */
